# smbc-incomplete

./: Cargo.toml  README.md  scenarios  todo
src/: ai.rs  api.rs  cannon.rs  eval.rs  format.rs  genTable_bench.rs  lib.rs  main.rs  moves.rs  table.rs  types.rs  web.rs
web/: game.css  game.html  game.js
