[package]
name = "smbc-incomplete"
version = "0.1.0"
edition = "2021"
include = [
	"src/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "*"
rayon = "*"
tungstenite = "*"
tokio-tungstenite = "*"
tokio = { features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "genTable_bench"
harness = false
path = "src/genTable_bench.rs"
